--- a/pepper/templates/users/admin/send_email.html
+++ b/pepper/templates/users/admin/send_email.html
@@ -61,7 +61,7 @@
                   <th>Last Name</th>
                   <th>Status</th>
                   <th>Email</th>
-                  <th>Confirmed</th>
+                  <th>Verified Email</th>
               </tr>
               </thead>
               <tbody>
