--- a/pepper/templates/users/dashboard/waitlisted.html
+++ b/pepper/templates/users/dashboard/waitlisted.html
@@ -5,5 +5,5 @@
         your email, as we send out invites to people on the waitlist.</p>
     <p>While we wish we could accept everyone who applies for {{ config.HACKATHON_NAME }}, there's a limited amount of
         space and it wouldn't be fun for anyone if it got too crowded. If you don't get in, we'd still be delighted for
-        you to join us as a <a href="https://hacktx.com/volunteer" class="decorate">volunteer</a>!</p>
+        you to join us as a <a href="https://goo.gl/forms/mx5fnYjohpI3AI4Y2" class="decorate">volunteer</a> or a <a href="https://goo.gl/forms/wi8cZ6dglqKvfdsC2" class="decorate">mentor</a>!</p>
 {% endblock %}
