--- a/pepper/templates/layouts/admin_base.html
+++ b/pepper/templates/layouts/admin_base.html
@@ -2,7 +2,7 @@
 {% block nav_items %}
     {{ nav_item('Home', 'admin-dash') }}
     {{ nav_item('Batch Users', 'batch-modify') }}
-    {{ nav_item('Modify Users', 'modify-users') }}
+    {{ nav_item('Accept Teams', 'accept-teams') }}
     {{ nav_item('Reject Users', 'reject-users') }}
     {{ nav_item('Debug User', 'debug-user') }}
     {{ nav_item('Send Emails', 'send-email') }}
