--- a/pepper/templates/users/dashboard/declined.html
+++ b/pepper/templates/users/dashboard/declined.html
@@ -4,8 +4,7 @@
         <h1>Invitation Declined</h1>
         <div class="large-text">
             <p>Sorry you couldn't make it this year, {{ user.fname }}! Unfortunately, once an invitation has been
-                declined, we are unable to change your status. We'd still love to have you join us as a <a
-                        href="https://hacktx.com/volunteer" class="decorate">volunteer or mentor</a>.</p>
+            declined, we are unable to change your status. We'd still love to have you join us as a <a href="https://goo.gl/forms/mx5fnYjohpI3AI4Y2" class="decorate">volunteer</a> or <a href="https://goo.gl/forms/wi8cZ6dglqKvfdsC2" class="decorate">mentor</a>.</p>
             <p><a href="https://freetailhackers.com" class="decorate">Freetail Hackers</a> will also be hosting a spring
                 hackathon that we hope you join us for.</p>
         </div>
