Minor changes to waitlisted dashbord and email layout and language

--- a/pepper/templates/emails/application_decisions/waitlisted.html
+++ b/pepper/templates/emails/application_decisions/waitlisted.html
@@ -7,17 +7,21 @@
     </tr>
     <tr>
       <td class="content-block">
-        Thank you for taking the time to apply to HackTX. You are waitlisted for HackTX.
+        Thank you for taking the time to apply to HackTX. Your application has been waitlisted.
       </td>
     </tr>
     <tr>
       <td class="content-block">
-        Applications for HackTX are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting! Cross your fingers though! There will be a second round of acceptances on October 16th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of HackTX, October 28.
+        Applications for HackTX are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting. Cross your fingers though! There will be a second round of acceptances on October 17th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of HackTX, October 28.
       </td>
     </tr>
     <tr>
       <td class="content-block">
-        How does walk-in work?
+        How do walk-ins work?
+      </td>
+    </tr>
+    <tr>
+      <td class="content-block">
         Our check-in for accepted hackers will run from about 10am-noon. If we still have extra spots (last year we had around 100 extra spots), you can try to get in as a waitlisted hacker around noon. An official schedule for walk-ins will come out on our website soon. You can also check our website on October 28, on which we will have a banner that states whether we have space for waitlisted hackers. This way, you won’t need to head all the way down to the Omni.
       </td>
     </tr>
