--- a/pepper/templates/users/dashboard/waitlisted.html
+++ b/pepper/templates/users/dashboard/waitlisted.html
@@ -6,9 +6,9 @@
     <p>While we wish we could accept everyone who applies for {{ config.HACKATHON_NAME }}, there's a limited amount of
         space and it wouldn't be fun for anyone if it got too crowded. If you don't get in, we'd still be delighted for
         you to join us as a <a href="https://goo.gl/forms/mx5fnYjohpI3AI4Y2" class="decorate">volunteer</a> or a <a href="https://goo.gl/forms/wi8cZ6dglqKvfdsC2" class="decorate">mentor</a>!</p>
-    <p>Applications for {{ config.HACKATHON_NAME }} are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting! Cross your fingers though! There will be a second round of acceptances on October 16th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of {{ config.HACKATHON_NAME }}, October 28.</p>
+    <p>Applications for {{ config.HACKATHON_NAME }} are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting. Cross your fingers though! There will be a second round of acceptances on October 17th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of {{ config.HACKATHON_NAME }}, October 28.</p>
+    <h2>How do walk-ins work?</h2>
     <p>
-    How does walk-in work?<br/>
     Our check-in for accepted hackers will run from about 10am-noon. If we still have extra spots (last year we had around 100 extra spots), you can try to get in as a waitlisted hacker around noon. An official schedule for walk-ins will come out on our website soon. You can also check our website on October 28, on which we will have a banner that states whether we have space for waitlisted hackers. This way, you won't need to head all the way down to the Omni.
     </p>
 {% endblock %}
