Add a page to display confirmed users' campus ambassador and travel reimbursement statuses

--- a/pepper/templates/layouts/user_base.html
+++ b/pepper/templates/layouts/user_base.html
@@ -5,4 +5,7 @@
         {{ nav_item('Manage Team', 'team') }}
         {{ nav_item('Edit Profile', 'edit-profile') }}
     {% endif %}
+    {% if current_user.status == 'CONFIRMED' and (current_user.campus_ambassador or current_user.needs_travel_reimbursement) %}
+        {{ nav_item('Additional Status(es)', 'additional-status') }}
+    {% endif %}
 {% endblock %}
