--- a/pepper/templates/static_pages/index.html
+++ b/pepper/templates/static_pages/index.html
@@ -7,14 +7,24 @@
         <div class="center"><h2>Austin, TX | October 28-29, 2017</h2></div>
         <div class="spacing"></div>
         <div class="container">
-            <a href="{{ url_for('sign-up') }}">
-                <button class="col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-2 submit text-center register-now title-buttons">
-                    <span class="hint--bottom" aria-label="Sign Up">SIGN UP</span></button>
-            </a>
-            <a href="{{ url_for('login') }}">
-                <button class="col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-1 submit text-center register-now title-buttons">
-                    <span class="hint--bottom" aria-label="Login">LOG IN</span></button>
-            </a>
+          {% if config.REGISTRATION_CLOSED %}
+          <a href="{{ url_for('login') }}">
+            <button class="col-md-2 col-md-offset-5 col-xs-4 col-xs-offset-4 submit text-center register-now title-buttons">
+              <span class="hint--bottom" aria-label="Login">LOG IN</span>
+            </button>
+          </a>
+          {% else %}
+          <a href="{{ url_for('sign-up') }}">
+            <button class="col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-2 submit text-center register-now title-buttons">
+              <span class="hint--bottom" aria-label="Sign Up">SIGN UP</span>
+            </button>
+          </a>
+          <a href="{{ url_for('login') }}">
+            <button class="col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-1 submit text-center register-now title-buttons">
+              <span class="hint--bottom" aria-label="Login">LOG IN</span>
+            </button>
+          </a>
+          {% endif %}
         </div>
     </section>
 
