--- a/pepper/templates/corporate/search.html
+++ b/pepper/templates/corporate/search.html
@@ -42,6 +42,26 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
+                    {#First Name#}
+                    <select name="fnames" multiple class="chosen-select" data-placeholder="First Names">
+                        {% for fname in fnames %}
+                            <option value="{{ fname }}">{{ fname }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    {#Last Name#}
+                    <select name="lnames" multiple class="chosen-select" data-placeholder="Last Names">
+                        {% for lname in lnames %}
+                            <option value="{{ lname }}">{{ lname }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
                     {#Attended#}
                     <label class="control control--checkbox">Attended
                         <input type="checkbox" name="attended" value="true"/>
