--- a/pepper/templates/users/admin/confirm_check_in.html
+++ b/pepper/templates/users/admin/confirm_check_in.html
@@ -60,7 +60,10 @@
     </div>
     <form action="{{ url_for('manual-check-in-post') }}" method="POST">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-        <input type="email" name="email" value="{{ user.email }}" placeholder="User email">
+        <input type="email" name="email" value="{{ user.email }}" placeholder="User email" required>
+        {% if requires_eid %}
+        <input type="text" name="eid" placeholder="UT EID" required>
+        {% endif %}
         <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
         </button>
     </form>
@@ -69,18 +72,4 @@
             $("#user-id").focus();
         });
     </script>
-    <br>
-    <p> List of pending users</p>
-
-    <ul>
-    </ul>
-    <ul>
-        {% for user in users %}
-            <div class="row">
-                <div class="col-md-6">
-                    {{ user.fname }} {{ user.lname }}
-                </div>
-            </div>
-        {% endfor %}
-    </ul>
 {% endblock content %}
