--- a/pepper/templates/users/sign.html
+++ b/pepper/templates/users/sign.html
@@ -31,7 +31,7 @@
 
     </div>
     <div class="sign top-buffer">
-        <form method="POST" action="{{ url_for('sign') }}">
+        <form method="POST" action="{{ url_for('check-in-sign', user_id=user.id) if check_in else url_for('sign') }}">
           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="col-md-12">
                 <h2>Medical Information</h2>
