--- a/pepper/templates/corporate/search.html
+++ b/pepper/templates/corporate/search.html
@@ -43,21 +43,22 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     {#First Name#}
-                    <select name="fnames" multiple class="chosen-select" data-placeholder="First Names">
-                        {% for fname in fnames %}
-                            <option value="{{ fname }}">{{ fname }}</option>
-                        {% endfor %}
-                    </select>
+{#                    <select name="fnames" multiple class="chosen-select" data-placeholder="First Names">#}
+{#                        {% for fname in fnames %}#}
+{#                            <option value="{{ fname }}">{{ fname }}</option>#}
+{#                        {% endfor %}#}
+{#                    </select>#}
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     {#Last Name#}
-                    <select name="lnames" multiple class="chosen-select" data-placeholder="Last Names">
-                        {% for lname in lnames %}
-                            <option value="{{ lname }}">{{ lname }}</option>
-                        {% endfor %}
-                    </select>
+            <input type="text" placeholder="Name" name="name">
+{#                    <select name="lnames" multiple class="chosen-select" data-placeholder="Last Names">#}
+{#                        {% for lname in lnames %}#}
+{#                            <option value="{{ lname }}">{{ lname }}</option>#}
+{#                        {% endfor %}#}
+{#                    </select>#}
                 </div>
             </div>
             <div class="row">
