--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -417,4 +417,35 @@ input[type=text].fullwidth, form input.fullwidth[type=number], form textarea.ful
 .accept-reimbursement-button:hover {
   color: #bbb9ea; }
 
+.text-container {
+  width: 100%;
+  float: left;
+  padding: 0 5px 0 5px;
+  background-color: white;
+  color: #999;
+  font-size: 13px; }
+  .text-container input[type=text].corp-text-box, .text-container form input.corp-text-box[type=number], form .text-container input.corp-text-box[type=number], .text-container form textarea.corp-text-box, form .text-container textarea.corp-text-box {
+    margin: 1px 0 1px 0;
+    padding: 0 0 0 0;
+    height: 25px;
+    border-radius: 0;
+    line-height: normal;
+    color: #999;
+    font-family: sans-serif;
+    font-size: 100%; }
+    .text-container input[type=text].corp-text-box:focus, .text-container form input.corp-text-box[type=number]:focus, form .text-container input.corp-text-box[type=number]:focus, .text-container form textarea.corp-text-box:focus, form .text-container textarea.corp-text-box:focus {
+      color: black; }
+    .text-container input[type=text].corp-text-box::-webkit-input-placeholder, .text-container form input.corp-text-box[type=number]::-webkit-input-placeholder, form .text-container input.corp-text-box[type=number]::-webkit-input-placeholder, .text-container form textarea.corp-text-box::-webkit-input-placeholder, form .text-container textarea.corp-text-box::-webkit-input-placeholder {
+      font-family: sans-serif;
+      color: #999; }
+    .text-container input[type=text].corp-text-box::-moz-placeholder, .text-container form input.corp-text-box[type=number]::-moz-placeholder, form .text-container input.corp-text-box[type=number]::-moz-placeholder, .text-container form textarea.corp-text-box::-moz-placeholder, form .text-container textarea.corp-text-box::-moz-placeholder {
+      font-family: sans-serif;
+      color: #999; }
+    .text-container input[type=text].corp-text-box:-moz-placeholder, .text-container form input.corp-text-box[type=number]:-moz-placeholder, form .text-container input.corp-text-box[type=number]:-moz-placeholder, .text-container form textarea.corp-text-box:-moz-placeholder, form .text-container textarea.corp-text-box:-moz-placeholder {
+      font-family: sans-serif;
+      color: #999; }
+    .text-container input[type=text].corp-text-box:-ms-input-placeholder, .text-container form input.corp-text-box[type=number]:-ms-input-placeholder, form .text-container input.corp-text-box[type=number]:-ms-input-placeholder, .text-container form textarea.corp-text-box:-ms-input-placeholder, form .text-container textarea.corp-text-box:-ms-input-placeholder {
+      font-family: sans-serif;
+      color: #999; }
+
 /*# sourceMappingURL=main.css.map */
