--- a/pepper/static/scss/main.scss
+++ b/pepper/static/scss/main.scss
@@ -616,3 +616,45 @@ input[type=text].fullwidth {
     color: $hacktx-light;
   }
 }
+
+
+.text-container {
+  width: 100%;
+  float: left;
+  padding: 0 5px 0 5px;
+  background-color: white;
+  color: #999;
+  font-size: 13px;
+
+  input[type=text].corp-text-box {
+    margin: 1px 0 1px 0;
+    padding: 0 0 0 0;
+    height: 25px;
+    border-radius: 0;
+    line-height: normal;
+    color: #999;
+    font-family: sans-serif;
+    font-size: 100%;
+
+    &:focus {
+      color: black;
+    }
+
+    &::-webkit-input-placeholder {
+      font-family: sans-serif;
+      color: #999;
+    }
+    &::-moz-placeholder {
+      font-family: sans-serif;
+      color: #999;
+    }
+    &:-moz-placeholder {
+      font-family: sans-serif;
+      color: #999;
+    }
+    &:-ms-input-placeholder {
+      font-family: sans-serif;
+      color: #999;
+    }
+  }
+}
