--- a/pepper/templates/corporate/dashboard.html
+++ b/pepper/templates/corporate/dashboard.html
@@ -10,7 +10,7 @@
             <p>Thanks for joining us at {{ config.HACKATHON_NAME }}! my{{ config.HACKATHON_NAME }} was built to make it
                 easier for you to find the information you're looking for.</p>
             <p>We're proud to have a diverse array of hackers who participated. To get started, we've built a portal
-                containing all attendees info, for you to either choose to <a href="{{ config.RESUMES_LINK }}"
+            containing all attendees info, for you to either choose to <a href="{{ url_for('all-resume-download') }}"
                                                                               class="decorate" target="_blank">download
                     all attendee resumes</a> or you can <a href="{{ url_for('corp-search') }}"
                                                            class="decorate">search</a> for attendees by applying
